--- a/dino-react/public/index.html
+++ b/dino-react/public/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../src/index.css">
 
-    <title>React App</title>
+    <title>Dino of the Day</title>
   </head>
   <body class="body">
     <noscript>
